# token-station-arena

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  spec.md  tsconfig.json
.github/workflows/: ci.yml
benchmark/config/: benchmark.yml  models.yml
benchmark/scripts/: evaluate-run.ts  generate-article.ts  import-token-dump.ts  judge-run.ts  run-benchmark.ts
benchmark/src/: article.ts  cli.ts  command.ts  config.ts  evaluator.ts  fs-utils.ts  judge.ts  models.ts  runner.ts  tasks.ts  token-station.ts  types.ts  yaml.ts
benchmark/tasks/add-api-endpoint/: prompt.md  task.yml
benchmark/tasks/add-api-endpoint/fixture/: Cargo.toml
benchmark/tasks/add-api-endpoint/fixture/.claude/: settings.json
benchmark/tasks/add-api-endpoint/fixture/crates/catalog-api/: Cargo.toml
benchmark/tasks/add-api-endpoint/fixture/crates/catalog-api/src/: lib.rs
benchmark/tasks/add-api-endpoint/fixture/crates/catalog-api/tests/: top_products.rs
benchmark/tasks/add-api-endpoint/fixture/crates/catalog-core/src/: catalog.rs  lib.rs
benchmark/tasks/fix-failing-test/: prompt.md  task.yml
benchmark/tasks/fix-failing-test/fixture/: Cargo.toml
benchmark/tasks/fix-failing-test/fixture/crates/catalog-core/src/: catalog.rs  lib.rs  pricing.rs
benchmark/tasks/refactor-pricing/: prompt.md  task.yml
benchmark/tasks/refactor-pricing/fixture/.claude/: settings.json
benchmark/tasks/refactor-pricing/fixture/crates/catalog-api/: Cargo.toml
benchmark/tasks/refactor-pricing/fixture/crates/catalog-api/src/: lib.rs  main.rs
benchmark/tasks/refactor-pricing/fixture/crates/catalog-core/: Cargo.toml
benchmark/tasks/refactor-pricing/fixture/crates/catalog-core/src/: lib.rs  pricing.rs
benchmark/tasks/refactor-pricing/fixture/scripts/: check-refactor.mjs
benchmark/test/: token-station.test.ts  yaml.test.ts
src/: article.rs  cli.rs  command.rs  config.rs  evaluator.rs  fs_utils.rs  judge.rs  lib.rs  main.rs  models.rs  runner.rs  tasks.rs  token_station.rs  types.rs  util.rs
tests/: article_gen.rs  dry_run.rs  load.rs  token_import.rs
