[package]
name = "token-station-arena"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Automated multi-model Claude Code benchmark and article generator for models.bytefuture.ai."

# The orchestrator is the only crate in this workspace. Each benchmark fixture
# under benchmark/tasks/*/fixture/ is its own independent Cargo workspace, and
# benchmark/runs/* holds copied fixture workspaces created at runtime. Excluding
# both guarantees `cargo build` here never tries to compile them.
[workspace]
exclude = ["benchmark/tasks", "benchmark/runs"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
nix = { version = "0.31.3", features = ["signal", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
walkdir = "2.5.0"

# Per global Rust preference: keep dependency debug info out of dev builds.
[profile.dev.package."*"]
debug = false

[dev-dependencies]
tempfile = "3.27.0"
