[package]
name = "catalog-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
catalog-core = { path = "../catalog-core" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true
